Added -X:noverify flag to running test to solve GIAPI-610 #resolve fixed #time 1h
git-svn-id: http://source.gemini.edu/software/giapi/giapi-osgi/trunk@38775 ee6ba543-07f8-4773-b02c-01d50e9d00ba