@@ -90,6 +90,14 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.7.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
+                <configuration>
+                    <argLine>-Xverify:none</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -159,6 +167,8 @@
         <module>gds-web-ui-status</module>
         <module>gds-web-ui-logs</module>
         <module>gmp-web-ui-properties</module>
+        <!--module>gpi-ao-plot</module>
+        <module>gmp-web-ui-console</module-->
         <module>gmp-server</module>
         <module>integration-tests</module>
     </modules>
